; ModuleID = '/home/carl/AnghaBench/sway/sway/config/extr_output.c_output_name_cmp.c'
source_filename = "/home/carl/AnghaBench/sway/sway/config/extr_output.c_output_name_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.output_config = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @output_name_cmp(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.output_config*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.output_config*
  store %struct.output_config* %8, %struct.output_config** %5, align 8
  %9 = load i8*, i8** %4, align 8
  store i8* %9, i8** %6, align 8
  %10 = load %struct.output_config*, %struct.output_config** %5, align 8
  %11 = getelementptr inbounds %struct.output_config, %struct.output_config* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @strcmp(i32 %12, i8* %13)
  ret i32 %14
}

declare dso_local i32 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
